# pi_app_trader

./: .gitignore  README.md  docker-compose.yaml
backend/src/: exampledata.py  main.py  watchdog.py
backend/src/markets/OKX/: public.py
backend/src/markets/OKX/models/: point_mdl.py  tickers_mdl.py  trades_mdl.py
backend/src/markets/OKX/models/error/: code.py
backend/src/routes/: sse.py
backend/src/routes/db_route/: db.py  db_models.py
frontend/: Dockerfile  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: SpotDataSSE.tsx  SubscribeForm.tsx
pi_app2/: Dockerf_bcp  Dockerfile  dahelp.txt  pyproject.toml
pi_app2/src/: dependencies.py
pi_app2/src/db/: db1.py
pi_app2/src/markets/OKX/models/: subscribe_mdl.py
pi_front/: README.md  indexbcp.css  package-lock.json
pi_front/src/: main.tsx
pi_front/src/components/: DealTable.tsx  Dealer.tsx
