[project]
name = "pi-app2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
[tools.pyright]
venvPath = "."
venv = ".venv"
[dependency-groups]
dev = [
    "black>=25.1.0",
]
